# surdo-perevodchik

./: .env.dist  .gitignore  Makefile  pyproject.toml
.github/: copilot-instructions.md
.github/tasks/: tasks.md
prompts/: hutsul_rules_system.txt
scripts/: generate_corpus.py
scripts/helpers/: jsonl_to_csv.py
src/notebooks/: load_base_corpora.ipynb
src/surdo_perevodchik/data_generation/: __init__.py  corpus_generator.py  llm_client.py  local_model_client.py  openrouter_client.py  prompt_builder.py
src/surdo_perevodchik/evaluation/: evaluate.py  evaluate_decoder_only.py  evaluate_model.py  metrics.py
src/surdo_perevodchik/training/: train.py  train_decoder_only.py  train_encoder_decoder.py
